corrected spacing for connect with me box
changed to space-evenly bc deleted stackoverflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ a:hover span {
 
 .spaceAround {
 	display:flex;
-	justify-content: space-around;
+	justify-content: space-evenly;
 }
 
 
